# ugl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindAntTweakBar.cmake  FindGLEW.cmake  FindNetCDF.cmake
doc/: Doxyfile
examples/: CMakeLists.txt
examples/afront_viewer/: AfrontViewer.cpp  AfrontViewer.hpp  StreamingMesh.cpp  StreamingMesh.hpp  main-sdl.cpp
examples/basic_viewer/: BasicViewer.cpp  BasicViewer.hpp  main-qt.cpp  main-sdl.cpp  main-wx.cpp
examples/dynamic_fragment_buffer_test/: DFBTest.cpp  DFBTest.hpp  SurfaceRenderer.cpp  SurfaceRenderer.hpp  SurfaceVectorData.cpp  main-qt.cpp  main-sdl.cpp
examples/render_to_texture/: RedTriangle.cpp  RedTriangle.hpp  RenderToTexture.cpp  RenderToTexture.hpp  main-qt.cpp  main-sdl.cpp  main-wx.cpp
examples/viewer/: SkullVolume.cpp  SkullVolume.hpp  SurfaceVectorData.hpp  Viewer.cpp  Viewer.hpp  main-qt.cpp  main-sdl.cpp  main-wx.cpp
include/ugl/: AbstractValueSet.hpp  BoundingBox.hpp  CoreApplication.hpp  CurvesCsvLoader.hpp  CurvesData.hpp  CurvesDrawable.hpp  DefaultRenderStage.hpp  Drawable.hpp  ErrorCheck.hpp  FileSystemWatcher.hpp  Framebuffer.hpp  GLHelper.hpp  GLSLPreprocessor.hpp  MeshData.hpp  MeshDrawable.hpp  ModeSet.hpp  NoValues.hpp  ScalarData.hpp  ScalarValues.hpp  ShaderProgram.hpp  ShaderType.hpp  SourceSplitter.hpp  StateSet.hpp  TransparentRenderStage.hpp  TransparentRenderStageDFB.hpp  UniformSet.hpp  UniformTraits.hpp  Utils.hpp  Values.hpp  VariantProgram.hpp  VecConv.hpp  ViewController.hpp  ViewController3D.hpp  Volume.hpp
include/ugl/qt/: OpenGLWidget.hpp  Widget.hpp
include/ugl/sdl/: App.hpp
include/ugl/wx/: Canvas.hpp
libs/FileWatcher/: FileWatcher.cpp  FileWatcher.h  FileWatcherImpl.h  FileWatcherLinux.cpp  FileWatcherLinux.h  FileWatcherOSX.cpp  FileWatcherOSX.h  FileWatcherWin32.cpp
shader/: redTriangle.glsl  surface.glsl  textureDisplay.glsl
shader/ugl/: background.glsl  bg_pattern.glsl  blend.glsl  color_curve.frag  color_curve.vert  color_default.frag  color_default.vert  color_scalar.frag  color_scalar.vert  color_vector.frag  color_vector.vert  color_white.frag  color_white.vert  curves.glsl  dfbClear.glsl  dfbDisplay.glsl  dfbPrefixSum.comp  dfbPrefixSum.glsl  globals.glsl  hsv2rgb.glsl  illuminate.frag  illuminate.vert  mesh.glsl  normal_face.frag  normal_face.vert  normal_none.frag  normal_none.vert  normal_vertex.frag  normal_vertex.vert  out.frag  phong.glsl
src/: BoundingBox.cpp  CMakeLists.txt  CoreApplication.cpp  CurvesCsvLoader.cpp  CurvesData.cpp  CurvesDrawable.cpp  DefaultRenderStage.cpp  Drawable.cpp  ErrorCheck.cpp  FileSystemWatcher.cpp  Framebuffer.cpp  GLSLPreprocessor.cpp  MeshData.cpp  MeshDrawable.cpp  ScalarData.cpp  ScalarValues.cpp  ShaderProgram.cpp  SourceSplitter.cpp  StateSet.cpp  TransparentRenderStage.cpp  TransparentRenderStageDFB.cpp  UniformSet.cpp  Utils.cpp  VariantProgram.cpp  ViewController3D.cpp  Volume.cpp
src/qt/: OpenGLWidget.cpp  Widget.cpp
src/sdl/: App.cpp
src/wx/: Canvas.cpp
